# gitten

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-01-gitten.md
docs/superpowers/specs/: 2026-04-01-gitten-design.md
gitten/: app.py  git_service.py  main.py  models.py  styles.tcss
gitten/components/: branch_panel.py  commit_panel.py  context_menu.py  detail_panel.py  diff_modal.py  error_modal.py  help_modal.py
tests/: conftest.py  test_git_service.py  test_main.py  test_models.py
